--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_now_playing">
+
+    <fragment
+        android:id="@+id/navigation_now_playing"
+        android:name="apps.sai.com.movieapp.ui.nowplaying.NowPlayingFragment"
+        android:label="@string/title_dashboard"
+        tools:layout="@layout/fragment_now_playing" />
 
     <fragment
         android:id="@+id/navigation_home"
@@ -11,11 +17,7 @@
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="apps.sai.com.movieapp.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+
 
     <fragment
         android:id="@+id/navigation_notifications"
