--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,10 @@
     <dimen name="movie_item_image_height">95dp</dimen>
     <dimen name="margin_normal">16dp</dimen>
     <dimen name="dimen_10">10dp</dimen>
+    <dimen name="dimen_18">18dp</dimen>
+    <dimen name="dimen_5">5dp</dimen>
+    <dimen name="dimen_100">100dp</dimen>
+    <dimen name="poster_image_height">195dp</dimen>
+    <dimen name="header_height">500dp</dimen>
+    <dimen name="poster_image_width">120dp</dimen>
 </resources>
