--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -67,7 +67,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="4dp"
-                            android:text="@{viewModel.movieDetailResponse.tagline}"
+                            android:text="@{viewModel.movieDetailResponse.title}"
                             android:textColor="@android:color/white" />
 
                     </LinearLayout>
@@ -99,7 +99,17 @@
                     app:imageFromUrl="@{viewModel.movieDetailResponse.posterPath}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-
+                <ImageView
+                    android:id="@+id/ivFav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:paddingHorizontal="@dimen/dimen_10"
+                    android:onClick="@{()->viewModel.favClicked(viewModel.movieDetailResponse.id)}"
+                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/title_favourite" />
                 <TextView
                     android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
@@ -112,7 +122,7 @@
                     android:text="@{viewModel.movieDetailResponse.originalLanguage}"
                     android:textAppearance="?attr/textAppearanceHeadline5"
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/ivFav" />
 
                 <TextView
                     android:id="@+id/releaseDate"
