--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/search"
         android:title="@string/search_title"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_search_24dp"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
+    <item android:id="@+id/favourite"
+        android:title="@string/title_favourite"
+        android:icon="@drawable/ic_favorite_border_24dp"
+        app:showAsAction="always"/>
 </menu>
