Loaded details and formatting of strings

--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -95,7 +95,7 @@
                     android:layout_width="@dimen/poster_image_width"
                     android:layout_height="@dimen/poster_image_height"
                     android:contentDescription="@string/poster_image"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitCenter"
                     app:imageFromUrl="@{viewModel.movieDetailResponse.posterPath}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -115,12 +115,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/dimen_5"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:paddingHorizontal="@dimen/dimen_10"
-                    android:text="@{viewModel.movieDetailResponse.originalLanguage}"
-                    android:textAppearance="?attr/textAppearanceHeadline5"
+                    android:text="@{viewModel.movieDetailResponse.genresFormatted}"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
                     app:layout_constraintTop_toBottomOf="@+id/ivFav" />
 
@@ -128,12 +128,11 @@
                     android:id="@+id/releaseDate"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/dimen_5"
                     android:paddingHorizontal="@dimen/dimen_10"
-                    android:text="@{viewModel.movieDetailResponse.releaseDate}"
+                    android:text="@{viewModel.movieDetailResponse.releaseDateFormatted }"
                     android:textAppearance="?attr/textAppearanceSubtitle2"
                     app:layout_constraintEnd_toEndOf="parent"
-
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
                     app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
@@ -141,12 +140,11 @@
                     android:id="@+id/tvVote"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/dimen_5"
                     android:paddingHorizontal="@dimen/dimen_10"
-                    android:text="@{viewModel.movieDetailResponse.voteAverage.toString() + viewModel.movieDetailResponse.voteCount}"
+                    android:text="@{viewModel.movieDetailResponse.voteAverageFormatted.toString()}"
                     android:textAppearance="?attr/textAppearanceHeadline6"
                     app:layout_constraintEnd_toEndOf="parent"
-
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
                     app:layout_constraintTop_toBottomOf="@id/releaseDate" />
 
@@ -154,12 +152,11 @@
                     android:id="@+id/tvGenre"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/dimen_5"
                     android:paddingHorizontal="@dimen/dimen_10"
-                    android:text="@{viewModel.movieDetailResponse.genres.get(0).name}"
+                    android:text="@{viewModel.movieDetailResponse.spokenLanguagesFormatted}"
                     android:textAppearance="?attr/textAppearanceHeadline6"
                     app:layout_constraintEnd_toEndOf="parent"
-
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
                     app:layout_constraintTop_toBottomOf="@id/tvVote" />
 
