--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,44 +16,94 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/card_side_margin"
-        android:layout_marginEnd="@dimen/card_side_margin"
         android:layout_marginBottom="@dimen/card_bottom_margin"
-        android:onClick="@{clickListener}"
+        android:onClick="@{(v)->clickListener.onClick(v)}"
         app:cardElevation="@dimen/card_elevation"
         app:cardPreventCornerOverlap="false">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/movie_photo"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/movie_item_image_height"
-                android:contentDescription="@string/movie_item_image"
-                android:scaleType="centerCrop"
-                app:imageFromUrl="@{movie.backdropPath}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_normal"
-                android:layout_marginBottom="@dimen/margin_normal"
-                android:gravity="center_horizontal"
-                android:textAppearance="?attr/textAppearanceListItem"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/movie_photo"
-                tools:text="Sunny F." />
+                android:layout_marginHorizontal="@dimen/dimen_5"
+                android:fitsSystemWindows="true"
+                android:paddingStart="@dimen/card_side_margin"
+                android:paddingTop="@dimen/dimen_5"
+                android:paddingEnd="@dimen/card_side_margin">
+
+                <ImageView
+                    android:id="@+id/ivPoster"
+                    android:layout_width="@dimen/poster_image_width"
+                    android:layout_height="@dimen/poster_image_height"
+                    android:contentDescription="@string/poster_image"
+                    android:scaleType="fitCenter"
+                    app:imageFromUrl="@{movie.posterPath}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dimen_5"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:paddingHorizontal="@dimen/dimen_10"
+                    android:text="@{movie.title}"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
+                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <TextView
+                    android:id="@+id/tvGenres"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/dimen_5"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:paddingHorizontal="@dimen/dimen_5"
+                    android:text="@{movie.genresFormatted}"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
+                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                    app:layout_constraintTop_toBottomOf="@id/tvTitle"/>
+
+                <TextView
+                    android:id="@+id/releaseDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_5"
+                    android:paddingHorizontal="@dimen/dimen_5"
+                    android:text="@{movie.releaseDateFormatted }"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                    app:layout_constraintTop_toBottomOf="@id/tvGenres" />
+
+                <TextView
+                    android:id="@+id/tvVote"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_5"
+                    android:paddingHorizontal="@dimen/dimen_5"
+                    android:text="@{movie.voteAverageFormatted.toString()}"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                    app:layout_constraintTop_toBottomOf="@id/releaseDate" />
+
+                <TextView
+                    android:id="@+id/tvGenre"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_5"
+                    android:paddingHorizontal="@dimen/dimen_5"
+                    android:text="@{movie.spokenLanguagesFormatted}"
+                    android:textAppearance="?attr/textAppearanceSubtitle2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                    app:layout_constraintTop_toBottomOf="@id/tvVote" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
-
 </layout>
