--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,7 +6,7 @@
     app:startDestination="@+id/navigation_now_playing">
     <action
         android:id="@+id/action_base_fragment_to_details"
-        app:destination="@id/details_fragment" />
+        app:destination="@id/navigation_details_fragment" />
 
     <action
         android:id="@+id/action_base_fragment_to_search"
@@ -40,7 +40,7 @@
         android:label="@string/title_upcoming"
         tools:layout="@layout/fragment_upcoming" />
 
-    <fragment android:id="@+id/details_fragment"
+    <fragment android:id="@+id/navigation_details_fragment"
         android:name="apps.sai.com.movieapp.ui.details.MovieDetailsFragment"
         tools:layout="@layout/fragment_movie_details">
         <argument android:name="movieId"
