--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -43,34 +43,34 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_gravity="bottom|center_horizontal"
-                        app:layout_collapseMode="parallax"
-                        android:id="@+id/main.linearlayout.title"
-                        android:background="@color/purple_200"
-                        app:layout_collapseParallaxMultiplier="0.3"
-                        android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/main.linearlayout.title"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:background="@color/purple_200"
+                    android:orientation="vertical"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.3">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:gravity="bottom|center"
-                            android:text="@{viewModel.movieDetailResponse.title}"
-                            android:textColor="@android:color/white"
-                            android:textSize="30sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="bottom|center"
+                        android:text="@{viewModel.movieDetailResponse.title}"
+                        android:textColor="@android:color/white"
+                        android:textSize="30sp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="4dp"
-                            android:text="@{viewModel.movieDetailResponse.title}"
-                            android:textColor="@android:color/white" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="4dp"
+                        android:text="@{viewModel.movieDetailResponse.spokenLanguagesFormatted}"
+                        android:textColor="@android:color/white" />
 
-                    </LinearLayout>
+                </LinearLayout>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -95,21 +95,23 @@
                     android:layout_width="@dimen/poster_image_width"
                     android:layout_height="@dimen/poster_image_height"
                     android:contentDescription="@string/poster_image"
-                    android:scaleType="fitCenter"
+                    android:scaleType="fitXY"
                     app:imageFromUrl="@{viewModel.movieDetailResponse.posterPath}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageView
                     android:id="@+id/ivFav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/margin_normal"
-                    android:paddingHorizontal="@dimen/dimen_10"
+                    android:contentDescription="@string/title_favourite"
                     android:onClick="@{()->viewModel.favClicked(viewModel.movieDetailResponse.id)}"
+                    android:paddingHorizontal="@dimen/dimen_10"
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/title_favourite" />
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <TextView
                     android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
@@ -148,17 +150,6 @@
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
                     app:layout_constraintTop_toBottomOf="@id/releaseDate" />
 
-                <TextView
-                    android:id="@+id/tvGenre"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_5"
-                    android:paddingHorizontal="@dimen/dimen_10"
-                    android:text="@{viewModel.movieDetailResponse.spokenLanguagesFormatted}"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toBottomOf="@id/tvVote" />
 
                 <TextView
                     android:id="@+id/tvOverview"
