--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/search"
+    <item android:id="@+id/menu_search"
         android:title="@string/search_title"
         android:icon="@drawable/ic_search_24dp"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
-    <item android:id="@+id/favourite"
+    <item android:id="@+id/menu_favourite"
         android:title="@string/title_favourite"
         android:icon="@drawable/ic_favorite_border_24dp"
         app:showAsAction="always"/>
