--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_now_playing"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_palette_24dp"
         android:title="@string/title_now_playing" />
     <item
         android:id="@+id/navigation_popular"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_guitar"
         android:title="@string/title_popular" />
 
     <item
         android:id="@+id/navigation_top_rated"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_favorite_24dp"
         android:title="@string/title_top_rated" />
 
     <item
         android:id="@+id/navigation_upcoming"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_arrow_up_24dp"
         android:title="@string/title_upcoming" />
 
 </menu>
