--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -114,21 +114,22 @@
 
                 <TextView
                     android:id="@+id/tvTitle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="@dimen/dimen_0"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/dimen_5"
                     android:ellipsize="end"
-                    android:maxLines="2"
                     android:paddingHorizontal="@dimen/dimen_10"
+                    android:maxLines="2"
                     android:text="@{viewModel.movieDetailResponse.genresFormatted}"
                     android:textAppearance="?attr/textAppearanceSubtitle2"
                     app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/ivFav" />
 
                 <TextView
                     android:id="@+id/releaseDate"
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/dimen_0"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_5"
                     android:paddingHorizontal="@dimen/dimen_10"
@@ -140,7 +141,7 @@
 
                 <TextView
                     android:id="@+id/tvVote"
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/dimen_0"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_5"
                     android:paddingHorizontal="@dimen/dimen_10"
@@ -153,7 +154,7 @@
 
                 <TextView
                     android:id="@+id/tvOverview"
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/dimen_0"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_normal"
                     android:paddingHorizontal="@dimen/dimen_5"
