--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -16,93 +16,89 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/card_side_margin"
         android:layout_marginBottom="@dimen/card_bottom_margin"
         android:onClick="@{(v)->clickListener.onClick(v)}"
         app:cardElevation="@dimen/card_elevation"
         app:cardPreventCornerOverlap="false">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:paddingTop="@dimen/dimen_5">
+
+            <ImageView
+                android:id="@+id/ivPoster"
+                android:layout_width="@dimen/poster_image_width"
+                android:layout_height="@dimen/poster_image_height"
+                android:layout_marginEnd="@dimen/dimen_5"
+                android:contentDescription="@string/poster_image"
+                android:scaleType="fitCenter"
+                app:imageFromUrl="@{movie.posterPath}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="@dimen/dimen_0"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/dimen_5"
-                android:fitsSystemWindows="true"
-                android:paddingStart="@dimen/card_side_margin"
-                android:paddingTop="@dimen/dimen_5"
-                android:paddingEnd="@dimen/card_side_margin">
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dimen_5"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@{movie.title}"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/ivPoster"
-                    android:layout_width="@dimen/poster_image_width"
-                    android:layout_height="@dimen/poster_image_height"
-                    android:contentDescription="@string/poster_image"
-                    android:scaleType="fitCenter"
-                    app:imageFromUrl="@{movie.posterPath}"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-                <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/dimen_5"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:paddingHorizontal="@dimen/dimen_10"
-                    android:text="@{movie.title}"
-                    android:textAppearance="?attr/textAppearanceSubtitle1"
-                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tvGenres"
+                android:layout_width="@dimen/dimen_0"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dimen_5"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@{movie.genresFormatted}"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
+            <TextView
+                android:id="@+id/releaseDate"
+                android:layout_width="@dimen/dimen_0"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_5"
+                android:text="@{movie.releaseDateFormatted }"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                app:layout_constraintTop_toBottomOf="@id/tvGenres" />
 
-                <TextView
-                    android:id="@+id/tvGenres"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/dimen_5"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:paddingHorizontal="@dimen/dimen_5"
-                    android:text="@{movie.genresFormatted}"
-                    android:textAppearance="?attr/textAppearanceSubtitle2"
-                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toBottomOf="@id/tvTitle"/>
+            <TextView
+                android:id="@+id/tvVote"
+                android:layout_width="@dimen/dimen_0"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_5"
+                android:text="@{movie.voteAverageFormatted.toString()}"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                app:layout_constraintTop_toBottomOf="@id/releaseDate" />
 
-                <TextView
-                    android:id="@+id/releaseDate"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_5"
-                    android:paddingHorizontal="@dimen/dimen_5"
-                    android:text="@{movie.releaseDateFormatted }"
-                    android:textAppearance="?attr/textAppearanceSubtitle2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toBottomOf="@id/tvGenres" />
-
-                <TextView
-                    android:id="@+id/tvVote"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_5"
-                    android:paddingHorizontal="@dimen/dimen_5"
-                    android:text="@{movie.voteAverageFormatted.toString()}"
-                    android:textAppearance="?attr/textAppearanceSubtitle2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toBottomOf="@id/releaseDate" />
-
-                <TextView
-                    android:id="@+id/tvGenre"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_5"
-                    android:paddingHorizontal="@dimen/dimen_5"
-                    android:text="@{movie.spokenLanguagesFormatted}"
-                    android:textAppearance="?attr/textAppearanceSubtitle2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/ivPoster"
-                    app:layout_constraintTop_toBottomOf="@id/tvVote" />
+            <TextView
+                android:id="@+id/tvGenre"
+                android:layout_width="@dimen/dimen_0"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_5"
+                android:text="@{movie.spokenLanguagesFormatted}"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ivPoster"
+                app:layout_constraintTop_toBottomOf="@id/tvVote" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
