--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="card_side_margin">5dp</dimen>
-    <dimen name="card_bottom_margin">26dp</dimen>
-    <dimen name="card_elevation">6dp</dimen>
+    <dimen name="card_bottom_margin">16dp</dimen>
+    <dimen name="card_elevation">12dp</dimen>
     <dimen name="card_corner_radius">12dp</dimen>
     <dimen name="movie_item_image_height">195dp</dimen>
     <dimen name="margin_normal">16dp</dimen>
@@ -12,7 +12,9 @@
     <dimen name="dimen_18">18dp</dimen>
     <dimen name="dimen_5">5dp</dimen>
     <dimen name="dimen_100">100dp</dimen>
-    <dimen name="poster_image_height">165dp</dimen>
+    <dimen name="poster_image_height">140dp</dimen>
     <dimen name="header_height">500dp</dimen>
     <dimen name="poster_image_width">120dp</dimen>
+    <dimen name="dimen_20">20dp</dimen>
+    <dimen name="dimen_0">0dp</dimen>
 </resources>
