--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -47,6 +48,7 @@
                 android:layout_marginTop="@dimen/dimen_5"
                 android:ellipsize="end"
                 android:maxLines="2"
+                tools:text="Title"
                 android:text="@{movie.title}"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +63,7 @@
                 android:layout_marginTop="@dimen/dimen_5"
                 android:ellipsize="end"
                 android:maxLines="2"
+                tools:text="Action,adventure, drama"
                 android:text="@{movie.genresFormatted}"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +73,7 @@
             <TextView
                 android:id="@+id/releaseDate"
                 android:layout_width="@dimen/dimen_0"
+                tools:text="Release Date"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_5"
                 android:text="@{movie.releaseDateFormatted }"
@@ -82,6 +86,7 @@
                 android:id="@+id/tvVote"
                 android:layout_width="@dimen/dimen_0"
                 android:layout_height="wrap_content"
+                tools:text="Vote"
                 android:layout_marginTop="@dimen/dimen_5"
                 android:text="@{movie.voteAverageFormatted.toString()}"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
@@ -94,6 +99,7 @@
                 android:layout_width="@dimen/dimen_0"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_5"
+                tools:text="Language"
                 android:text="@{movie.spokenLanguagesFormatted}"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 app:layout_constraintEnd_toEndOf="parent"
